--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,7 +18,7 @@
   "Vault-APY": "APY",
   "Vault-APYDaily": "Daily",
   "Vault-TVL": "TVL",
-  "Vault-AutocompoundingNote": "All vaults autocompound at an optimal rate",
+  "Vault-AutocompoundingNote": "All Sandwiches are Delicions in their own way 🥪!",
   "Vault-Approving": "Approving...",
   "Vault-ApproveButton": "Approve",
   "Vault-ApprovalSuccess": "Approval success",
