--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -140,7 +140,7 @@
   "Stake-Balancer-Current-Staked": "Currently Staked",
   "Stake-Balancer-Rewards-Available": "Rewards Available",
   "Stake-Balancer-Half-Time": "Half-Time",
-  "Stake-BoostedBy": "Boosted by {{name}}",
+  "Stake-BoostedBy": "Extra Cheese for {{name}}",
   "Stake-Button-Back": "Back",
   "Stake-Pool-Retired": "The pool has finished, withdraw your funds.",
   "Stake-Total-Value-Locked": "Total {{mooToken}} Staked",
