hoverbutton color + Rewards Earned

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -138,7 +138,7 @@
   "Stake-Button-Claim-Rewards": "Claim Rewards",
   "Stake-Button-Exit": "Claim and Unstake",
   "Stake-Balancer-Current-Staked": "Currently Staked",
-  "Stake-Balancer-Rewards-Available": "Rewards Available",
+  "Stake-Balancer-Rewards-Available": "Rewards Earned",
   "Stake-Balancer-Half-Time": "Half-Time",
   "Stake-BoostedBy": "Extra Cheese for {{name}}",
   "Stake-Button-Back": "Back",
