--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -18,7 +18,7 @@
   "Vault-APY": "APY",
   "Vault-APYDaily": "Daily",
   "Vault-TVL": "TVL",
-  "Vault-AutocompoundingNote": "All 🥪s are Delicions in their own way !",
+  "Vault-AutocompoundingNote": "All 🥪s are delicious, but everyone loves extra cheese!",
   "Vault-Approving": "Approving...",
   "Vault-ApproveButton": "Approve",
   "Vault-ApprovalSuccess": "Approval success",
