boost to xcheese

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -79,8 +79,8 @@
   "Vault-Breakdown-VaultDaily": "Vault Daily",
   "Vault-Breakdown-TradingDaily": "Trading Daily",
   "Vault-Breakdown-BoostDaily": "Boost Daily",
-  "Vault-Boosts-Staked-Single": "Staked in {{name}} boost",
-  "Vault-Boosts-Staked-Count": "Staked in {{count}} boosts",
+  "Vault-Boosts-Staked-Single": "Staked in {{name}} xCheese",
+  "Vault-Boosts-Staked-Count": "Staked in {{count}} xCheese",
   "Vault-Banner-CakeV2-StakeLabel": "Stake your {{symbol}}",
   "Vault-Banner-CakeV2-StakeValue": "New pure {{symbol}} vault",
   "Vault-Banner-CakeV2-SaferLabel": "Safer",
@@ -128,7 +128,7 @@
   "Coming-Soon": "Coming Soon",
   "Finished": "Finished",
   "End": "End",
-  "Stakes-Meta-Title": "Boosts - {{networkName}}",
+  "Stakes-Meta-Title": "xCheese - {{networkName}}",
   "Stake-Meta-Title": "Earn {{earnedToken}} - Boosted by {{boostedBy}} - {{networkName}}",
   "Stake-Button-Stake": "Stake",
   "Stake-Button-Claim": "Claim",
