added WL message

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -1,6 +1,6 @@
 {
   "App-Meta-Description": "The Multichain Yield Optimizer",
-  "Disclaimer": "Crypto is risky but this is HIGH DEGEN stuff. DYOR before making 🥪s.",
+  "Disclaimer": "Crypto is risky but this is HIGH DEGEN stuff. You need to be WHITELISTED to make 🥪s.",
   "Network-UnknownError": "An unknown error has occurred.",
   "Network-ConnectionRequired": "Wallet connection to {{network}} required.",
   "Network-Supports": "This app supports {{network}}.",
