clean up xCheese modal

--- a/src/locales/en/translation.json
+++ b/src/locales/en/translation.json
@@ -139,6 +139,7 @@
   "Stake-Button-Exit": "Claim and Unstake",
   "Stake-Balancer-Current-Staked": "Currently Staked",
   "Stake-Balancer-Rewards-Available": "Rewards Earned",
+  "Stake-Reward-Image": "Reward Token",
   "Stake-Balancer-Half-Time": "Half-Time",
   "Stake-BoostedBy": "Extra Cheese for {{name}}",
   "Stake-Button-Back": "Back",
